[gd_scene load_steps=11 format=3 uid="uid://ds1srgc15xh70"]

[ext_resource type="Script" path="res://World/main.gd" id="1_40pi7"]
[ext_resource type="Script" path="res://World/Background.gd" id="2_egrtt"]
[ext_resource type="Texture2D" uid="uid://c1qqmndqpuirq" path="res://World/space_300x800.png" id="3_2dna5"]
[ext_resource type="PackedScene" uid="uid://bhly1sn1nyugw" path="res://player/player.tscn" id="4_kjngg"]
[ext_resource type="PackedScene" uid="uid://du6kybeyrcmf2" path="res://ui/ui.tscn" id="5_r43jo"]
[ext_resource type="PackedScene" uid="uid://d2fwlf8gf57ym" path="res://ui/center_container.tscn" id="6_5jg3u"]
[ext_resource type="PackedScene" uid="uid://be1e8nb1py4ti" path="res://ui/title_screen.tscn" id="7_vrvlr"]

[sub_resource type="Animation" id="Animation_7oex0"]
length = 0.001

[sub_resource type="Animation" id="Animation_h81m7"]
resource_name = "scroll"
length = 2.0
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gky1u"]
_data = {
"RESET": SubResource("Animation_7oex0"),
"scroll": SubResource("Animation_h81m7")
}

[node name="Main" type="Node2D" groups=["main"]]
script = ExtResource("1_40pi7")
start_lives = 5

[node name="Background" type="ParallaxBackground" parent="."]
script = ExtResource("2_egrtt")
speed = 30.0

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2(2.08165e-12, 800)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxLayer"]
position = Vector2(2.08165e-12, -400)
texture = ExtResource("3_2dna5")
centered = false

[node name="Player" parent="." instance=ExtResource("4_kjngg")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "scroll"
libraries = {
"": SubResource("AnimationLibrary_gky1u")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("5_r43jo")]

[node name="CenterContainer" parent="CanvasLayer" instance=ExtResource("6_5jg3u")]

[node name="TitleScreen" parent="CanvasLayer" instance=ExtResource("7_vrvlr")]

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="ScoringTimer" type="Timer" parent="."]
one_shot = true

[connection signal="game_over" from="." to="." method="_on_game_over"]
[connection signal="game_over" from="." to="CanvasLayer/CenterContainer" method="_on_main_game_over"]
[connection signal="multiplier_active" from="." to="CanvasLayer/UI" method="_on_main_multiplier_active"]
[connection signal="new_stage" from="." to="CanvasLayer/UI" method="_on_main_new_stage"]
[connection signal="new_stage" from="." to="CanvasLayer/CenterContainer" method="_on_main_new_stage"]
[connection signal="pause_game" from="." to="." method="_on_pause_game"]
[connection signal="pause_game" from="." to="CanvasLayer/UI" method="_on_main_pause_game"]
[connection signal="pause_game" from="." to="CanvasLayer/CenterContainer" method="_on_main_pause_game"]
[connection signal="score_changed" from="." to="CanvasLayer/UI" method="_on_main_score_changed"]
[connection signal="stage_cleared" from="." to="." method="_on_stage_cleared"]
[connection signal="stage_cleared" from="." to="Background" method="_on_main_stage_cleared"]
[connection signal="stage_cleared" from="." to="CanvasLayer/UI" method="_on_main_stage_cleared"]
[connection signal="start_game" from="." to="Player" method="_on_main_start_game"]
[connection signal="start_game" from="." to="CanvasLayer/UI" method="_on_main_start_game"]
[connection signal="start_game" from="." to="CanvasLayer/CenterContainer" method="_on_main_start_game"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="died" from="Player" to="CanvasLayer/UI" method="_on_player_died"]
[connection signal="gained_life" from="Player" to="CanvasLayer/UI" method="_on_player_gained_life"]
[connection signal="item_changed" from="Player" to="CanvasLayer/UI" method="_on_player_item_changed"]
[connection signal="item_charging" from="Player" to="CanvasLayer/UI" method="_on_player_item_charging"]
[connection signal="item_recharged" from="Player" to="CanvasLayer/UI" method="_on_player_item_recharged"]
[connection signal="item_used" from="Player" to="CanvasLayer/UI" method="_on_player_item_used"]
[connection signal="out_of_lives" from="Player" to="." method="_on_player_out_of_lives"]
[connection signal="out_of_lives" from="Player" to="CanvasLayer/UI" method="_on_player_out_of_lives"]
[connection signal="weapon_changed" from="Player" to="CanvasLayer/UI" method="_on_player_weapon_changed"]
[connection signal="game_unpaused" from="CanvasLayer/CenterContainer" to="." method="_on_center_container_game_unpaused"]
[connection signal="game_unpaused" from="CanvasLayer/CenterContainer" to="CanvasLayer/UI" method="_on_center_container_game_unpaused"]
[connection signal="start_pressed" from="CanvasLayer/CenterContainer" to="." method="_on_center_container_start_pressed"]
[connection signal="attack_mode" from="CanvasLayer/TitleScreen" to="." method="_on_title_screen_attack_mode"]
[connection signal="boss_mode" from="CanvasLayer/TitleScreen" to="." method="_on_title_screen_boss_mode"]
[connection signal="stage_mode" from="CanvasLayer/TitleScreen" to="." method="_on_title_screen_stage_mode"]
[connection signal="story_mode" from="CanvasLayer/TitleScreen" to="." method="_on_title_screen_story_mode"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="ScoringTimer" to="." method="_on_scoring_timer_timeout"]
